# eecs-397-f15-hudeck

./: README.md  traj_client.cpp
baxter_wipe/: CMakeLists.txt  README.md  package.xml
coplanar_ps7/: CMakeLists.txt  README.md  package.xml
coplanar_ps7/src/: coplanar_ps7.cpp
coplanar_utils/: CMakeLists.txt  README.md  package.xml
coplanar_utils/include/: coplanar_utils.h
coplanar_utils/include/coplanar_utils/: coplanar_utils.h
coplanar_utils/src/: coplanar_utils.cpp
do_my_moves/: CMakeLists.txt  README.md  package.xml
do_my_moves/src/: do_my_moves.cpp
keyboard_module/: CMakeLists.txt  README.md  package.xml
keyboard_module/src/: keyboard_module.cpp
my_interesting_moves/: CMakeLists.txt  README.md  package.xml
my_interesting_moves/action/: traj.action
my_interesting_moves/include/my_interesting_moves/: right_arm_moves.h
my_interesting_moves/src/: baxter_flex.cpp  right_arm_moves.cpp
my_moves/: CMakeLists.txt  README.md  package.xml
my_moves/html/: annotated.html  class_my__moves-members.html  class_my__moves.html  classes.html  dir_86ff147b49f6d72e026627d197bffb51.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  md__r_e_a_d_m_e.html  my__moves_8h_source.html  pages.html
my_moves/html/search/: all_0.js  all_1.js  classes_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  search.js
my_moves/include/my_moves/: my_moves.h
my_moves/latex/: annotated.tex  class_my__moves.tex  dir_86ff147b49f6d72e026627d197bffb51.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  md__r_e_a_d_m_e.tex  refman.tex
my_moves/src/: do_my_moves.cpp  my_moves.cpp
pcl/: CMakeLists.txt  README.md  package.xml
pcl/src/: pcl_process_points  pcl_process_points.cpp
project8/: CMakeLists.txt  README.md  package.xml
project8/src/: guided_motion_client.cpp
sg_motion_hudeck_ps8/: CMakeLists.txt  README.md  package.xml
sg_motion_hudeck_ps8/src/: arm_motion_commander_class.cpp  guided_motion_client_hudeck_ps8.cpp
