<?xml version="1.0"?>
<package>
  <name>my_interesting_moves</name>
  <version>0.0.0</version>
  <description>The my_interesting_moves package</description>
  
 
  <maintainer email="nicholas.hudeck@case.edu">user</maintainer>

  
  <license>TODO</license>

  <build_depend>message_generation</build_depend> 
   <buildtool_depend>catkin</buildtool_depend>
  <build_depend>Eigen</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
    <build_depend>cwru_joint_space_planner</build_depend>
  <build_depend>baxter_kinematics</build_depend>  
   <build_depend>cwru_srv</build_depend>   
 <build_depend>message_generation</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>actionlib</build_depend>   
  <run_depend>Eigen</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>cwru_joint_space_planner</run_depend>
  <run_depend>baxter_kinematics</run_depend>
  <run_depend>cwru_srv</run_depend>
  <run_depend>message_runtime</run_depend>
   <run_depend>actionlib_msgs</run_depend>    
   <run_depend>actionlib</run_depend> 

  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
    