<?xml version="1.0"?>
<package>
  <name>guided_motion_client</name>
  <version>0.0.0</version>
  <description>guided_motion_client package</description>
  
  <maintainer email="nicholas.hudeck@case.edu">Nicholas Hudeck</maintainer>

  <license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
<buildtool_depend>catkin_simple</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>cwru_action</build_depend>
<build_depend>cwru_msgs</build_depend>
<build_depend>actionlib_msgs</build_depend>
<build_depend>actionlib</build_depend>
<build_depend>tf</build_depend>
<build_depend>cwru_pcl_utils</build_depend>

<run_depend>roscpp</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>geometry_msgs</run_depend>
<run_depend>cwru_action</run_depend>
<run_depend>cwru_msgs</run_depend>
<run_depend>actionlib_msgs</run_depend>
<run_depend>actionlib</run_depend>
<run_depend>tf</run_depend>
<run_depend>cwru_pcl_utils</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
    
